{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player Controls",
            "id": "47558235-f427-4844-94fd-6e669c4852a2",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "bdce686e-f2c5-4360-88b7-c19d533ebfa3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "27ba75bd-e10e-4f74-881a-d5c14b053f4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ActivateHook",
                    "type": "Button",
                    "id": "6298dd73-24c4-47ca-89f2-34b42bf65d0b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ElecArm",
                    "type": "Button",
                    "id": "56a0e44a-df62-43f1-b37f-028d909a1dc5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ActivateMagArm",
                    "type": "Button",
                    "id": "27dca19b-aede-49a3-a087-caa37659cb1f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3f26004c-f9e5-4d87-a20a-823650b55901",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "MoveAxis",
                    "id": "2d998636-e2fc-4953-b329-7859f087a4f4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cd7dbdd5-e88b-4e55-9a48-a8c7c7c6551b",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "976edf49-59d5-409f-966b-12430845fba7",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "42bece95-25ec-4320-b386-5f42b8ce4fde",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d6e16011-0c2d-4119-afae-4c9a62f1799e",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD",
                    "id": "85024393-279d-4d7d-89e5-125dadf0d644",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "be047dff-a4cf-4131-a12f-799361720583",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7140730f-8ac9-4610-a7f5-2320f64772cf",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5167d804-1402-41d6-9c03-bbfc1b22e90a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "02942a27-5f9a-4237-8586-1784bec131ac",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a4b694ce-0d10-4c56-9a72-c038c0589e94",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2737dd3e-bc73-418b-a203-99080f6762bc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cc62609-36fa-4ea7-9cb8-bf43da07e1bc",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ActivateHook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "495b632a-6f12-497c-800c-bb9774eef36e",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ElecArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01f14076-9c49-4df6-a4c5-42b24dd8b7b4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ElecArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b00e7355-636d-488c-85a9-1da79951eaf5",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ActivateMagArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InventoryControls",
            "id": "b07e10e3-90e4-45e2-af4e-0ca004d01b92",
            "actions": [
                {
                    "name": "Left Bumper",
                    "type": "Button",
                    "id": "96fcca6c-8af8-41d3-9a29-550779a22693",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right Bumper",
                    "type": "Button",
                    "id": "f59fdf44-6f47-49b8-a790-0357988b8d93",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftSelectCog",
                    "type": "Button",
                    "id": "16e84fa2-5b4f-4f6f-b652-04d56b19475e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightSelectCog",
                    "type": "Button",
                    "id": "3b2f8056-134a-4de9-a533-ccb3853960b0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "East Button",
                    "type": "Button",
                    "id": "04748b9e-1b5a-4987-9681-ecdad844cf1a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "South Button",
                    "type": "Button",
                    "id": "6861ee0b-ad32-47fb-94c7-7909cc523062",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectPushed",
                    "type": "Button",
                    "id": "524d8a71-3cab-43f4-b090-8bb9972209ad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "897c15cc-dc3a-4189-a1b6-ddab6841ef7a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "ea9d91ea-40c6-4562-bcf9-e4c592fe0117",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "8582c7af-b2c5-4cc5-b4ef-baa79247ebba",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "647367cc-52b9-4697-bcba-a9b0fbd84242",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "df1970f9-7f88-49f2-9d60-fec4195a338d",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Left Bumper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9a3987f-9a4d-4818-a619-c60793f206cc",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Right Bumper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13a11cdc-417e-4308-a848-7a7e5ec74a9c",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "LeftSelectCog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e69e55e-c8b2-4a73-ae78-bb54f91dc342",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "LeftSelectCog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "905876c8-133d-4ff2-b21a-30eaed5dde01",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RightSelectCog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81fd1348-ca24-4903-bc7b-f4116fb7a60b",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RightSelectCog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42ff141b-b233-40ca-aa16-3ea30a0e9f1c",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "East Button",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98fcad01-a135-400a-a5ae-78f73d0d61e4",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "South Button",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14a2bafd-1a5a-4ea8-83d2-d3a0cadfa04d",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SelectPushed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb84442a-e9fd-4b4a-942d-7c12764f3ea1",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ce5a48d-53d9-4aee-b14f-d1ba3462e121",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de0389e8-cc18-468e-b08e-a330c0a8ec52",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abbcc1af-9dbe-48eb-a610-7ae4c80d90c5",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TimeControls",
            "id": "136283d1-fea4-4205-a5f3-2b18bdd596b6",
            "actions": [
                {
                    "name": "TimeStop",
                    "type": "Button",
                    "id": "88ccf581-4ead-42a6-8641-9d04e3f02b65",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TimeSlow",
                    "type": "Button",
                    "id": "01163390-b2b0-4d46-a260-6adbb23b0961",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2c9dfff6-58a4-4d4a-8e29-5479eb8690ae",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "TimeStop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7024019-ccb6-4997-86e1-64457e950784",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "TimeSlow",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}